--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch a Sketch</title>
     <script src="./script.js" defer></script>
+    <link href="./style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="container"></section>
+    </main>
+  </body>
 </html>
